objects/LiveAgentSession.object
<CustomObject>
    <fields>
        <fullName>Time_Spent_Available__c</fullName>
        <formula>TimeInOnlineStatus -    TimeInChats</formula>
        <label>Time Spent Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Logged_In_Min__c</fullName>
        <formula>TimeInOnlineStatus / 60</formula>
        <label>Time Spent Logged In (Min)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Logged_In__c</fullName>
        <formula>TimeInOnlineStatus  +  TimeInAwayStatus</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent Logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Rogers_Support_LiveAgentSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>